--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ main h2 {
     padding: 3px;
 }
 
+.my-style {
+    color: orange;
+}
+
 .code-ninja-style {
     color: blue;
     background-color: lightblue;
